[gd_scene load_steps=10 format=3 uid="uid://dgfpf7rgi4ty4"]

[ext_resource type="Script" uid="uid://bcti3fm7f1n3y" path="res://Scripts/Interface/GameSelectionMenu.gd" id="1_4pi7x"]
[ext_resource type="Texture2D" uid="uid://p3ef6f1774nm" path="res://Assets/Buttons/retry.png" id="2_dbwtd"]
[ext_resource type="Texture2D" uid="uid://b4djb12gv2upj" path="res://Assets/Sprites/Player/Male_1/character.png" id="3_qgaqy"]
[ext_resource type="Texture2D" uid="uid://cnf0moeayw3td" path="res://Assets/Sprites/Player/Male_2/character.png" id="4_3bhgq"]
[ext_resource type="Texture2D" uid="uid://w158v0gc3nxe" path="res://Assets/Sprites/Player/Female_1/character.png" id="5_ctjff"]
[ext_resource type="Texture2D" uid="uid://cir60rixyutwe" path="res://Assets/Sprites/Player/Female_2/character.png" id="6_gf1n5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bpkox"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h880y"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ejsg"]

[node name="LobbyMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
scale = Vector2(1, 0.9968454)
script = ExtResource("1_4pi7x")

[node name="PlayContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bpkox")

[node name="CarouselContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -752.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h880y")

[node name="MarginContainer" type="MarginContainer" parent="CarouselContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CarouselContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CarouselContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="PrevButtonTexture" type="TextureRect" parent="CarouselContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_dbwtd")
expand_mode = 3
stretch_mode = 4

[node name="PreviousButton" type="Button" parent="CarouselContainer/MarginContainer/VBoxContainer/HBoxContainer/PrevButtonTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
offset_bottom = -2.8924255
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3ejsg")

[node name="ScrollContainer" type="ScrollContainer" parent="CarouselContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="ObjectContainer" type="HBoxContainer" parent="CarouselContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 25

[node name="Male_1" type="TextureRect" parent="CarouselContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
custom_minimum_size = Vector2(100, 359)
layout_mode = 2
texture = ExtResource("3_qgaqy")
expand_mode = 1
stretch_mode = 5

[node name="Male_2" type="TextureRect" parent="CarouselContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
custom_minimum_size = Vector2(100, 359)
layout_mode = 2
texture = ExtResource("4_3bhgq")
expand_mode = 1
stretch_mode = 5

[node name="Female_1" type="TextureRect" parent="CarouselContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
custom_minimum_size = Vector2(100, 359)
layout_mode = 2
texture = ExtResource("5_ctjff")
expand_mode = 1
stretch_mode = 5

[node name="Female_2" type="TextureRect" parent="CarouselContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
custom_minimum_size = Vector2(100, 359)
layout_mode = 2
texture = ExtResource("6_gf1n5")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="CarouselContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
layout_mode = 2
theme_override_constants/margin_right = 70

[node name="NextButtonTexture" type="TextureRect" parent="CarouselContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_dbwtd")
expand_mode = 3
flip_h = true

[node name="NextButton" type="Button" parent="CarouselContainer/MarginContainer/VBoxContainer/HBoxContainer/NextButtonTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_3ejsg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3ejsg")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 821.0
offset_top = 276.8734
offset_right = 995.0
offset_bottom = 357.1266
text = "PLAY!"

[node name="SelectionMarker" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -2.5
offset_right = -371.0
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="CarouselContainer/MarginContainer/VBoxContainer/HBoxContainer/PrevButtonTexture/PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="CarouselContainer/MarginContainer/VBoxContainer/HBoxContainer/NextButtonTexture/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
